# deep_augment

./: README.md
docker_source_code/docker_composite_image_generator/: Dockerfile  dev-comments.txt  docker-compose.yml  start.sh
docker_source_code/docker_composite_image_generator/include/: Dataset.h  Label.h
docker_source_code/docker_composite_image_generator/prototypes/: compileCommand.txt  dataset_config.yeet
docker_source_code/docker_composite_image_generator/prototypes/config_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  maintest
docker_source_code/docker_composite_image_generator/prototypes/config_test/include/: Dataset.h
docker_source_code/docker_composite_image_generator/prototypes/config_test/src/: Dataset.cpp  main.cpp
docker_source_code/docker_composite_image_generator/prototypes/header_test/: CMakeLists.txt  PassFunction.cpp  PassFunction.h  main.cpp  randomFunc.h
docker_source_code/docker_composite_image_generator/src/: Dataset.cpp  Label.cpp
docker_source_code/docker_feature_extraction_model/: Dockerfile  docker-compose.yml
docker_source_code/docker_training_box/: Dockerfile  docker-compose.yml
docker_source_code/docker_training_box/scripts/: start.sh
docker_source_code/docker_training_box/scripts/misc/: test_model.py  (+3 more)
docker_source_code/docker_training_mask/: Dockerfile  docker-compose.yml
docker_source_code/docker_training_mask/scripts/: start.sh  train_latest.py
utils/: video-to-backgrounds.py
utils/generate_shapes/: compile.py  generateRandomShapes.py  generate_compile.py  generate_compile_filaments.py
(+62 files in other folders)
